--- a/Snake/snake.kv
+++ b/Snake/snake.kv
@@ -1,4 +1,5 @@
 #: kivy 1.8.0
+#: import Window kivy.core.window.Window
 
 <SnakePart>:
     canvas:
@@ -6,4 +7,13 @@
             rgb: self.color if self.color != [] else (1, 1, 1)
         Ellipse:
             pos: self.pos
-            size: self.part_size
+            size: self.size
+        Ellipse:
+            pos: self.pos[0] % Window.width, self.pos[1] % Window.height
+            size: self.size
+
+<SnakeFoo>:
+    canvas:
+        Ellipse:
+            pos: self.pos
+            size: self.size
